--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   table_calendar: ^2.3.0
   marquee: ^1.6.1
   connectivity: ^2.0.1
+  image_picker: ^0.6.7+14
 
 
 dev_dependencies:
@@ -56,6 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/images/signUpMethods/
 
   # An image asset can refer to one or more resolution-specific "variants", see
