--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,35 +12,36 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.0
-  get: ^3.13.0
+
+  #get
+  get: ^3.21.2
+  get_storage: ^1.3.2
+
+  #UI/UX assistance
   cached_network_image: ^2.3.3
-  qr_code_scanner: ^0.0.13
-  awesome_dialog: ^1.2.1
-  intl:
   calendar_flutter: ^1.1.5
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  qr_code_scanner: ^0.0.13
+  image_picker: ^0.6.7+14
   table_calendar: ^2.3.0
+  awesome_dialog: ^1.2.1
   marquee: ^1.6.1
-  connectivity: ^2.0.1
+  logger: ^0.9.4
+  intl: ^0.16.1
+  path: ^1.7.0
+  flutter_spinkit: ^4.1.2+1
 
   #Firebase
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
+  firebase_storage: ^5.0.1
   cloud_firestore: ^0.14.3
+
+  #3rd party logins
+  google_sign_in: ^4.5.6
+  flutter_facebook_login: ^3.0.0
+
+  #unused packages for now
+  connectivity: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -50,4 +51,5 @@ flutter:
 
   uses-material-design: true
   assets:
+    - assets/images/
     - assets/images/signUpMethods/
