--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   path: ^1.7.0
   flutter_spinkit: ^4.1.2+1
   url_launcher: ^5.7.10
+  dependencies:
+  font_awesome_flutter: ^8.10.1
+
 
   #Firebase
   firebase_core: ^0.5.2
