--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,14 +14,14 @@ dependencies:
   cupertino_icons: ^1.0.0
 
   #get
-  get: ^3.21.2
+  get: ^3.22.2
   get_storage: ^1.3.2
 
   #UI/UX assistance
-  cached_network_image: ^2.3.3
+  cached_network_image: ^2.4.1
   calendar_flutter: ^1.1.5
-  qr_code_scanner: ^0.0.13
-  image_picker: ^0.6.7+14
+  qr_code_scanner: ^0.0.14
+  image_picker: ^0.6.7+15
   table_calendar: ^2.3.0
   awesome_dialog: ^1.2.1
   marquee: ^1.6.1
@@ -30,22 +30,21 @@ dependencies:
   path: ^1.7.0
   flutter_spinkit: ^4.1.2+1
   url_launcher: ^5.7.10
-  dependencies:
   font_awesome_flutter: ^8.10.1
 
 
   #Firebase
-  firebase_core: ^0.5.2
-  firebase_auth: ^0.18.3
-  firebase_storage: ^5.0.1
-  cloud_firestore: ^0.14.3
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  firebase_storage: ^5.2.0
+  cloud_firestore: ^0.14.4
 
   #3rd party logins
   google_sign_in: ^4.5.6
   flutter_facebook_login: ^3.0.0
 
   #unused packages for now
-  connectivity: ^2.0.1
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
