--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '12.0'
-
-# add the Firebase pod for Google Analytics
-pod 'Firebase/Analytics'
-# add pods for any other desired Firebase products
-# https://firebase.google.com/docs/ios/setup#available-pods
+platform :ios, '9.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -33,6 +28,12 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
+
+  #pod 'Firebase/Auth'
+  #pod 'Firebase/Firestore'
+  #pod 'Firebase/Core'
+  pod 'Firebase/Analytics'
+
   use_frameworks!
   use_modular_headers!
 
