--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   url_launcher: ^5.7.10
   font_awesome_flutter: ^8.10.1
+  loading_overlay: ^0.2.1
 
 
   #Firebase
