--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
 
   #unused packages for now
   connectivity: ^2.0.2
+  permission_handler: ^5.0.1+1
+
 
 dev_dependencies:
   flutter_test:
